# lazyrate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: lazyrate-indicator.desktop
docs/: demo.tape
packaging/: vendor-requirements.txt
packaging/debian/: changelog  control  copyright  install  rules
packaging/launchers/: lazyrate  lazyrate-indicator
src/lazyrate/: __init__.py  __main__.py  calc.py  cli.py  clipboard.py  config.py  format.py  service.py  stats.py  store.py
src/lazyrate/indicator/: __init__.py  app.py
src/lazyrate/providers/: __init__.py  base.py  bcv.py  binance_p2p.py
src/lazyrate/tui/: __init__.py  app.py  calculator_view.py  config_screen.py  lazyrate.tcss  widgets.py
tests/: test_bcv.py  test_binance_p2p.py  test_calc.py  test_cli.py  test_clipboard.py  test_config.py  test_format.py  test_regressions.py  test_stats.py  test_store.py  test_tui_smoke.py
tests/fixtures/: 2_1_2a26_otrasmonedas.xls  binance_p2p_page1.json
