[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lazyrate"
dynamic = ["version"]
description = "Tasa BCV y Binance P2P (USDT/VES) en la barra de GNOME, con TUI estilo lazydocker"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Frany Velasquez", email = "zerodaty@gmail.com" }]
keywords = ["venezuela", "bcv", "binance", "p2p", "exchange-rate", "appindicator", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "xlrd>=2.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
tui = [
    "textual>=1,<2",
    "textual-plotext>=1.0",
]
dev = [
    "lazyrate[tui]",
    "pytest>=8",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/zerodaty/lazyrate"
Issues = "https://github.com/zerodaty/lazyrate/issues"

[project.scripts]
lazyrate = "lazyrate.cli:main"
lazyrate-indicator = "lazyrate.indicator.app:main"

[tool.hatch.version]
path = "src/lazyrate/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lazyrate"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
